package com.marslps.AISafeFMS.model.enums;

public enum AircraftStatus {
    AVAILABLE,
    IN_FLIGHT,
    INACTIVE,
    UNDER_MAINTENANCE;
}
